--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     </div>
                     <!-- volume bar -->
 
-                    <div class="flex flex-col">
+                    <div class="flex flex-col w-1">
                         <input
                             type="range"
                             id="player-volume-bar"
-                            class="h-full w-1" />
+                            class="h-full" />
                         <div class="absolute -my-6 -mx-1">
                             <svg height="1em" viewBox="0 0 448 512">
                                 <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -67,7 +67,7 @@
                 <input
                     type="range"
                     id="player-progress-bar"
-                    class="row-span-1 w-full max-w-xs h-1" />
+                    class="row-span-1 w-full max-w-xs" />
                 <!-- <div
                     id="player-progress-bar"
                     class=" bg-zinc-300 rounded-full">
