reset record when next or prev buttons clicked

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <!-- player controls -->
                     <div class="flex items-center space-x-5">
                         <!-- previous button -->
-                        <button class="player-previous-button">
+                        <button class="player-previous-button reset-record">
                             <svg
                                 class="fill-zinc-500 hover:fill-black"
                                 width="30"
@@ -130,7 +130,7 @@
                             </svg>
                         </button>
                         <!-- next button -->
-                        <button class="player-next-button">
+                        <button class="player-next-button reset-record">
                             <svg
                                 class="fill-zinc-500 hover:fill-black"
                                 xmlns="http://www.w3.org/2000/svg"
