--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             class="main-container grid h-screen grid-rows-4 grid-flow-col gap-2 p-2">
             <!-- 1. music player -->
             <div
-                class="music-player-container py-2 row-span-3 col-span-2 border-4 border-black rounded-md flex flex-col items-center px-8">
+                id="music-player-container"
+                class="py-2 row-span-3 col-span-2 border-4 border-black rounded-md flex flex-col items-center px-8">
                 <!-- top half -->
                 <!-- slider colors are temporary -->
                 <div class="mb-8">
@@ -1182,6 +1183,7 @@
         </div>
 
         <script src="script.js"></script>
+        <script src="queue.js"></script>
         <script src="populate.js"></script>
         <script src="select.js"></script>
     </body>
