Remove script.js script tag

--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
             </div>
         </div>
 
-        <script src="script.js"></script>
+        <!-- <script src="script.js"></script> -->
         <script src="populate.js"></script>
         <script src="select.js"></script>
     </body>
