--- a/index.html
+++ b/index.html
@@ -532,27 +532,27 @@
                 <!-- 4.a.i song grid -->
                 <div
                     id="song-grid"
-                    class="hidden grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-8 gap-x-4 gap-y-2 lg:gap-y-8 py-2"></div>
+                    class="hidden grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-[1440px]:grid-cols-5 min-[1640px]:grid-cols-6 min-[1800px]:grid-cols-7 min-[2000px]:grid-cols-8 gap-4 py-4"></div>
 
                 <!-- 4.a.ii playlists Page -->
                 <div
                     id="playlists-subsection"
-                    class="hidden grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-8 gap-x-4 gap-y-2 lg:gap-y-8 py-2"></div>
+                    class="hidden grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-[1440px]:grid-cols-5 min-[1640px]:grid-cols-6 min-[1800px]:grid-cols-7 min-[2000px]:grid-cols-8 gap-4 py-4"></div>
 
                 <!-- 4.a.iii albums Page -->
                 <div
                     id="albums-subsection"
-                    class="hidden grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-8 gap-x-4 gap-y-2 lg:gap-y-8 py-2"></div>
+                    class="hidden grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-[1440px]:grid-cols-5 min-[1640px]:grid-cols-6 min-[1800px]:grid-cols-7 min-[2000px]:grid-cols-8 gap-4 py-4"></div>
 
                 <!-- 4.a.iv artists page -->
                 <div
                     id="artists-subsection"
-                    class="hidden grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-8 gap-x-4 gap-y-2 lg:gap-y-8 py-2"></div>
+                    class="hidden grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-[1440px]:grid-cols-5 min-[1640px]:grid-cols-6 min-[1800px]:grid-cols-7 min-[2000px]:grid-cols-8 gap-4 py-4"></div>
 
                 <!-- 4.a.v artist discography -->
                 <div
                     id="discography-subsection"
-                    class="hidden grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-8 gap-x-4 gap-y-2 lg:gap-y-8 py-2"></div>
+                    class="hidden grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-[1440px]:grid-cols-5 min-[1640px]:grid-cols-6 min-[1800px]:grid-cols-7 min-[2000px]:grid-cols-8 gap-4 py-4"></div>
 
                 <!-- 4.b Friends Interface-->
                 <div id="friends-subsection" class="hidden">
