--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             class="rounded-full" />
                     </div>
                     <!-- volume button -->
-                    <div class="">
+                    <div>
                         <svg
                             height="1.5em"
                             viewBox="0 0 448 512"
