--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <!-- shuffle button -->
                     <button class="player-shuffle-button">
                         <svg
-                            class="fill-zinc-500 hover:fill-black"
+                            class="fill-zinc-500 hover:fill-black hover:cursor-not-allowed"
                             xmlns="http://www.w3.org/2000/svg"
                             width="28"
                             height="25"
@@ -133,7 +133,7 @@
                     <!-- loop button -->
                     <button class="player-loop-button">
                         <svg
-                            class="fill-zinc-500 hover:fill-black"
+                            class="fill-zinc-500 hover:fill-black hover:cursor-not-allowed"
                             xmlns="http://www.w3.org/2000/svg"
                             width="27"
                             height="25"
