--- a/index.html
+++ b/index.html
@@ -200,6 +200,69 @@
                         </h2>
                     </div>
 
+                    <div id="library-page" class="hidden flex justify-between w-full">
+                        <div class="flex flex-row items-center gap-6">
+                            <button
+                                class="libraryPage-backButton fill-black hover:cursor-pointer hover:fill-green-400"
+                                onclick="changeContent('back', null)">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="36"
+                                    height="30"
+                                    viewBox="0 0 36 30">
+                                    <path
+                                        d="M34 17C35.1046 17 36 16.1046 36 15C36 13.8954 35.1046 13 34 13L34 17ZM0.585786 13.5858C-0.195262 14.3668 -0.195262 15.6332 0.585786 16.4142L13.3137 29.1421C14.0948 29.9232 15.3611 29.9232 16.1421 29.1421C16.9232 28.3611 16.9232 27.0948 16.1421 26.3137L4.82843 15L16.1421 3.68629C16.9232 2.90524 16.9232 1.63891 16.1421 0.857864C15.3611 0.0768159 14.0948 0.0768159 13.3137 0.857864L0.585786 13.5858ZM34 13L2 13L2 17L34 17L34 13Z" />
+                                </svg>
+                            </button>
+                            <h2 id="libraryPage-title" class="text-3xl font-bold"></h2>
+                        </div>
+                        <div class="library-controls flex items-center">
+                            <div
+                                id="libraryControls-play"
+                                class="hidden flex flex-row mx-2 items-center gap-x-4">
+                                <div
+                                    class="libraryControlsPlay-playButton fill-black hover:fill-green-400 hover:cursor-pointer">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        width="50"
+                                        height="50"
+                                        viewBox="0 0 50 50">
+                                        <circle
+                                            cx="25"
+                                            cy="25"
+                                            r="25"
+                                            class="fill-inherit" />
+                                        <path
+                                            d="M35 25L20 33.6603L20 16.3397L35 25Z"
+                                            fill="white" />
+                                    </svg>
+                                </div>
+                                <div
+                                    class="libraryControlsPlay-queueButton fill-black hover:fill-green-400 hover:cursor-pointer">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        width="40"
+                                        height="40"
+                                        viewBox="0 0 256 256">
+                                        <path
+                                            class="fill-inherit"
+                                            d="M32 64a8 8 0 0 1 8-8h176a8 8 0 0 1 0 16H40a8 8 0 0 1-8-8Zm104 56H40a8 8 0 0 0 0 16h96a8 8 0 0 0 0-16Zm0 64H40a8 8 0 0 0 0 16h96a8 8 0 0 0 0-16Zm112-24a8 8 0 0 1-3.76 6.78l-64 40A8 8 0 0 1 168 200v-80a8 8 0 0 1 12.24-6.78l64 40A8 8 0 0 1 248 160Zm-23.09 0L184 134.43v51.14Z" />
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="libraryControls-sort mx-2">
+                                <p class="inline text-base">Sort:</p>
+                                <select
+                                    name="sort"
+                                    class="bg-transparent text-base"
+                                    id="library-likedSongs-sort"
+                                    disabled>
+                                    <option value="alphabetical">Alphabetical</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
                     <div
                         id="liked-songs-bar"
                         class="hidden flex justify-between w-full">
@@ -596,49 +659,29 @@
                     <div id="artists-area" class="mb-8"></div>
                 </div>
 
-                <!-- 4.a.i song grid -->
+                <!-- 4.b library grid -->
                 <div
-                    id="song-grid"
+                    id="library-grid"
                     class="hidden grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-[1440px]:grid-cols-5 min-[1640px]:grid-cols-6 min-[1800px]:grid-cols-7 min-[2000px]:grid-cols-8 gap-4 py-4"></div>
 
-                <!-- 4.a.ii playlists Page -->
-                <div
-                    id="playlists-subsection"
-                    class="hidden grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-[1440px]:grid-cols-5 min-[1640px]:grid-cols-6 min-[1800px]:grid-cols-7 min-[2000px]:grid-cols-8 gap-4 py-4"></div>
-
-                <!-- 4.a.iii albums Page -->
-                <div
-                    id="albums-subsection"
-                    class="hidden grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-[1440px]:grid-cols-5 min-[1640px]:grid-cols-6 min-[1800px]:grid-cols-7 min-[2000px]:grid-cols-8 gap-4 py-4"></div>
-
-                <!-- 4.a.iv artists page -->
-                <div
-                    id="artists-subsection"
-                    class="hidden grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-[1440px]:grid-cols-5 min-[1640px]:grid-cols-6 min-[1800px]:grid-cols-7 min-[2000px]:grid-cols-8 gap-4 py-4"></div>
-
-                <!-- 4.a.v artist discography -->
-                <div
-                    id="discography-subsection"
-                    class="hidden grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-[1440px]:grid-cols-5 min-[1640px]:grid-cols-6 min-[1800px]:grid-cols-7 min-[2000px]:grid-cols-8 gap-4 py-4"></div>
-
-                <!-- 4.b Friends Interface-->
+                <!-- 4.c Friends Interface-->
                 <div id="friends-subsection" class="hidden">
                     <h2 class="text-xl font-bold">
                         Friends page not implemented.
                     </h2>
                 </div>
 
-                <!-- 4.c Settings Interface -->
+                <!-- 4.d Settings Interface -->
                 <div id="settings-subsection" class="hidden">
                     <h2 class="text-xl font-bold">
                         Settings page not implemented.
                     </h2>
                 </div>
             </div>
+        <script src="populate.js"></script>
+        <script src="select.js"></script>
         <script>
             feather.replace();
         </script>
-        <script src="populate.js"></script>
-        <script src="select.js"></script>
     </body>
 </html>
