changed volume svg to be position absolute and top right of record

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                 </div>
                 <!-- record -->
                 <div
-                    class="row-span-2 flex flex-row justify-between sm:w-50 max-w-xs">
+                    class="row-span-2 flex flex-row justify-between sm:w-50 max-w-xs relative">
                     <div class="inline px-5">
                         <img
                             id="player-record"
-                            src="/assets/song-cover.jpg"
+                            src="/assets/albums/cypress.jpg"
                             alt="Song Cover Disk"
                             class="rounded-full" />
                     </div>
                     <!-- volume button -->
-                    <div>
+                    <div class="absolute top-0 right-0">
                         <svg
                             height="1.5em"
                             viewBox="0 0 448 512"
