able to remove a song from queue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
             crossorigin="anonymous"></script> -->
-        <script src="style.css"></script>
+            <script src="style.css"></script>
         <script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
         <title>VinylMusic</title>
     </head>
@@ -145,9 +145,9 @@
             <!-- 2. queue -->
             <div
                 id="queue-container"
-                class="row-span-1 col-span-2 border-4 border-black rounded-md">
+                class="row-span-1 col-span-2 border-4 border-black rounded-md overflow-y-scroll">
                 <!-- Home Page Queue -->
-                <div id="small-queue" class="active ml-4 mt-2">
+                <div id="small-queue" class="active ml-4 mt-2 ">
     
                     <div class="flex flex-row items-center">
                         <header class="text-3xl font-bold">
