--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <!-- 1. music player -->
             <div
                 id="music-player-container"
-                class="row-span-3 col-span-2 grid grid-rows-4 gap-2 grid-cols-1 bg-gray-100 border-black rounded-md flex flex-col items-center justify-items-center py-2 px-4">
+                class="row-span-3 col-span-2 grid grid-rows-4 gap-2 grid-cols-1 bg-gray-100 border-black rounded-md flex flex-col items-center justify-items-center py-2 px-4 overflow-hidden">
                 <!-- top half -->
                 <!-- slider colors are temporary -->
                 <!-- labels -->
-                <div class="row-span-1 max-w-xs mb-2">
+                <div class="row-span-1 max-w-xs mb-2 relative w-11/12 text-center">
                     <p
                         id="current-song-title"
                         class="text-4xl font-sans font-bold">
@@ -35,19 +35,8 @@
                         class="text-gray-500 text-3xl f font-sans">
                         Artist
                     </p>
-                </div>
-                <!-- record -->
-                <div
-                    class="row-span-2 flex flex-row justify-between sm:w-50 max-w-xs relative">
-                    <div class="inline px-5">
-                        <img
-                            id="player-record"
-                            src="/assets/albums/cypress.jpg"
-                            alt="Song Cover Disk"
-                            class="rounded-full" />
-                    </div>
                     <!-- volume button -->
-                    <div class="absolute top-0 right-0">
+                    <div class="absolute inset-y-1/3 right-0">
                         <svg
                             height="1.5em"
                             viewBox="0 0 448 512"
@@ -58,7 +47,18 @@
                         </svg>
                     </div>
                 </div>
-
+                <!-- record -->
+                <div
+                    class="row-span-2 flex flex-row justify-between sm:w-50 max-w-xs h-full aspect-square">
+                    <div class="inline ">
+                        <img
+                            id="player-record"
+                            src="/assets/albums/cypress.jpg"
+                            alt="Song Cover Disk"
+                            class="rounded-full h-full" />
+                    </div>
+                </div>
+                
                 <!-- progress bar -->
                 <input
                     type="range"
