--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="//cdn.jsdelivr.net/velocity/1.5/velocity.min.js"></script>
-        <script src="populate.js" defer></script>
+        <script src="script.js" defer></script>
         <script src="select.js"></script>
         <title>VinylMusic</title>
     </head>
@@ -315,8 +315,5 @@
                     </h2>
                 </div>
             </div>
-        <script>
-            feather.replace();
-        </script>
     </body>
 </html>
