Migrate song selection code to script.js

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="//cdn.jsdelivr.net/velocity/1.5/velocity.min.js"></script>
         <script src="script.js" defer></script>
-        <script src="select.js"></script>
+        <!-- <script src="select.js" defer></script> -->
         <title>VinylMusic</title>
     </head>
     <body class="bg-gray-300">
         <!-- main container -->
         <div
             id="main-container"
-            class="h-screen max-w-7xl m-auto grid grid-rows-4 grid-flow-col gap-2 p-2">
+            class="h-screen max-w-8xl m-auto grid grid-rows-4 grid-flow-col gap-2 p-2">
             <!-- 1. music player -->
             <div
                 id="music-player-container"
@@ -222,7 +222,8 @@
                                 id="libraryControls-play"
                                 class="hidden flex flex-row mx-2 items-center gap-x-4">
                                 <div
-                                    class="libraryControlsPlay-playButton fill-black hover:fill-green-400 hover:cursor-pointer">
+                                    id="libraryControlsPlay-playButton"
+                                    class=" fill-black hover:fill-green-400 hover:cursor-pointer">
                                     <svg
                                         xmlns="http://www.w3.org/2000/svg"
                                         width="50"
@@ -239,7 +240,8 @@
                                     </svg>
                                 </div>
                                 <div
-                                    class="libraryControlsPlay-queueButton fill-black hover:fill-green-400 hover:cursor-pointer">
+                                    id="libraryControlsPlay-queueButton"
+                                    class=" fill-black hover:fill-green-400 hover:cursor-pointer">
                                     <svg
                                         xmlns="http://www.w3.org/2000/svg"
                                         width="40"
