--- a/index.html
+++ b/index.html
@@ -25,19 +25,21 @@
                 <!-- top half -->
                 <!-- slider colors are temporary -->
                 <!-- labels -->
-                <div class="row-span-1 max-w-xs mb-2 relative w-11/12 text-center">
-                    <p
-                        id="current-song-title"
-                        class="text-4xl font-sans font-bold">
-                        Title
-                    </p>
-                    <p
-                        id="current-song-artist"
-                        class="text-gray-500 text-3xl f font-sans">
-                        Artist
-                    </p>
+                <div class="row-span-1 flex justify-start items-center w-3/4 mb-2">
+                    <div class="mr-8 overflow-hidden">
+                        <p
+                            id="current-song-title"
+                            class="text-4xl font-sans font-bold whitespace-nowrap">
+                            Title
+                        </p>
+                        <p
+                            id="current-song-artist"
+                            class="text-gray-500 text-3xl font-sans whitespace-nowrap">
+                            Artist
+                        </p>
+                    </div>
                     <!-- volume button -->
-                    <div class="absolute inset-y-1/3 right-0">
+                    <div class="">
                         <svg
                             height="1.5em"
                             viewBox="0 0 448 512"
@@ -50,14 +52,12 @@
                 </div>
                 <!-- record -->
                 <div
-                    class="row-span-2 flex flex-row justify-between sm:w-50 max-w-xs h-full aspect-square">
-                    <div class="inline ">
+                    class="row-span-2 max-w-xs aspect-square h-full">
                         <img
                             id="player-record"
                             src="/assets/albums/cypress.jpg"
                             alt="Song Cover Disk"
-                            class="rounded-full h-full" />
-                    </div>
+                            class="rounded-full" />
                 </div>
                 
                 <!-- progress bar -->
@@ -70,7 +70,7 @@
                     max="180" />
                 <!-- buttons -->
                 <div
-                    class="row-span-1 mb-1 flex items-center max-w-xs sm:gap-2 md:gap-8 lg:gap-16">
+                    class="row-span-1 mb-4 flex items-center max-w-xs sm:gap-2 md:gap-8 lg:gap-16">
                     <!-- shuffle button -->
                     <button class="player-shuffle-button">
                         <svg
