Update hover styling for buttons

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                     <!-- Song information and Volume Control -->
                 <div class="
                         row-span-1 
-                        flex justify-start items-center 
-                        w-3/4 mb-2">
+                        flex justify-between items-center 
+                        w-full max-w-xs mb-2 border-2">
 
                     <div class="
                         mr-8 
-                        overflow-hidden">
+                        overflow-hidden max-w-[360px]">
                         <p
                             id="current-song-title"
                             class="text-4xl font-sans font-bold whitespace-nowrap">
@@ -63,7 +63,7 @@
                     </div>
 
                     <!-- Volume Button -->
-                    <i class="h-max w-10 hover:fill-black hover:cursor-not-allowed" data-feather="volume-x" color="red"></i>
+                    <i class="h-max w-10 hover:fill-black hover:cursor-not-allowed" data-feather="volume-x"></i>
 
                 </div>
 
@@ -99,33 +99,35 @@
                         max-w-xs md:gap-10 sm:gap-4">
 
                     <!-- shuffle button -->
-                    <button class="player-shuffle-button">
-                        <i class="w-8 h-8 fill-zinc-500 hover:fill-black" data-feather="shuffle"></i>
+                    <!-- TODO: implement shuffle if there's time -->
+                    <button class="player-shuffle-button" disabled>
+                        <i class="w-8 h-8 fill-zinc-500 hover:fill-black hover hover:cursor-not-allowed" data-feather="shuffle"></i>
                     </button>
                     
                     <!-- P L A Y E R   C O N T R O L S -->
                     <div class="flex items-center space-x-5">
                         <!-- previous button -->
                         <button class="player-previous-button change-song">
-                            <i class="h-max w-9 hover:fill-black" data-feather="skip-back"></i>
+                            <i class="h-max w-9 hover:fill-green-400 hover:text-green-400" data-feather="skip-back"></i>
                         </button>
                         <!-- play button -->
                         <button class="player-play-button">
-                            <i class="h-max w-9 hover:fill-black" data-feather="play"></i>
+                            <i class="h-max w-9 hover:fill-green-400 hover:text-green-400" data-feather="play"></i>
                         </button>
                         <!-- pause button -->
                         <button class="player-pause-button hidden">
-                            <i class="h-max w-9 hover:fill-black" data-feather="pause"></i>
+                            <i class="h-max w-9 hover:fill-green-400 hover:text-green-400" data-feather="pause"></i>
                         </button>
                         <!-- next button -->
                         <button class="player-next-button change-song">
-                            <i class="h-max w-9 hover:fill-black" data-feather="skip-forward"></i>
+                            <i class="h-max w-9 hover:fill-green-400 hover:text-green-400" data-feather="skip-forward"></i>
                         </button>
                     </div>
 
                     <!-- Repeat Button -->
+                    <!-- TODO: implement loop if there's time -->
                     <button class="player-loop-button">
-                        <i class="h-max w-8 hover:fill-black" data-feather="repeat"></i>
+                        <i class="h-max w-8 hover:cursor-not-allowed" data-feather="repeat"></i>
                     </button>
                 </div>
             </div>
@@ -221,12 +223,12 @@
                                 class="hidden flex flex-row mx-2 items-center gap-x-4">
                                 <div
                                     id="libraryControlsPlay-playButton"
-                                    class=" fill-black hover:fill-green-400 hover:cursor-pointer">
+                                    class=" fill-black hover:text-green-400 hover:cursor-pointer">
                                     <i class="h-full w-10" data-feather="play-circle"></i>
                                 </div>
                                 <div
                                     id="libraryControlsPlay-queueButton"
-                                    class=" fill-black hover:fill-green-400 hover:cursor-pointer">
+                                    class=" text-black hover:fill-green-400 hover:cursor-pointer">
                                     <svg
                                         xmlns="http://www.w3.org/2000/svg"
                                         width="40"
