Reduce current song info size

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                         overflow-hidden max-w-[360px]">
                         <p
                             id="current-song-title"
-                            class="text-4xl font-sans font-bold whitespace-nowrap">
+                            class="text-xl font-sans font-bold whitespace-nowrap">
                             Title
                         </p>
                         <p
                             id="current-song-artist"
-                            class="text-gray-500 text-3xl font-sans whitespace-nowrap">
+                            class="text-gray-500 text-lg font-sans whitespace-nowrap">
                             Artist
                         </p>
                     </div>
